
2011-04-06  Gustavo Sverzut Barbieri

	* Add Simple XML parser API.

2011-04-11  Cedric Bail

	* Add eina_inlist_sort.
	* Add eina_mempool_repack.

2011-04-13  Cedric Bail & Vincent Torri

	* Add Eina_File API, a portable mmap helper with some cache and tracking feature.

2011-04-22  Vincent Torri

        * Add Eina_Lock API, a portable solution across various system for locking/unlocking mutex.

2011-04-24  Carsten Haitzler (The Rasterman)

        * Add a prefix location finder api to eina. Beta status. needs
        more use from higher up libs/apps first.

2011-04-24  Vincent Torri

        * Fix uninstallation of the mempools modules

2011-04-27  Vincent Torri

        * Fix static build of the buddy mempool

2011-04-29  Cedric Bail

	* Add Eina_Refcount macro helper. You should really use them when running with thread !

2011-05-14  Vincent Torri

	* Add Eina_Condition API on Windows.

2011-05-17  Tom Hacohen (TAsn)

	* Added eina_binbuf: This is just like strbuf but for binary blobs.
	  Requested by discomfitor and honestly it looks needed.

2011-05-18  Cedric Bail

	* Fix eina_share_common_init to be called only once.

2011-05-24  Vincent Torri

	* Implement eina_sched_prio_drop() on Windows

2011-05-24  Cedric Bail

	* Add eina_inlist_sorted_insert.

2011-05-30  Cedric Bail

	* Add eina_condition_timedwait.

2011-05-31  Cedric Bail

	* Fix eina_hash_set to handle data == NULL like eina_hash_del.

2011-06-03  Vincent Torri

        * Fix static linking with eina (iconv could potentially not be
	passed to the linker)

2011-06-15  Cedric Bail

	* Add eina_hash_free_cb_set to change the free callback during the
	life of an Eina_Hash.

2011-06-23  Cedric Bail

	* Add Eina_LockRW.

2011-07-04  Carsten Haitzler (The Rasterman)

	* Add eina_mmap safety handling.

2011-07-29  Cedric Bail

	* Add eina_main_loop_is.

2011-08-03  Myungjae Lee

	* Fix eina_share_common_del and eina_share_common_ref to release lock on failure.